--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,12 @@
 		<div class="leftmain">
 		Cost per kilowatt hour of electricity:<br>
 		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><br>
-		
+		Number of panels wanted:<br>
+		<input class="input_main" type="text" name="panelcount" placeholder="1" tabindex="2" required><br>
+		Budget:<br>
+		<input class="input_main" type="text" name="budget" placeholder="10,000" tabindex="3" required><br>
+		Desired payoff time in months:<br>
+		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="4" required><br>
 		
 		</div> <!-- end of left main -->
 	
