--- a/index.htm
+++ b/index.htm
@@ -20,8 +20,25 @@
 
 <div class="main">
 	<div class="wrapper">
-	
+		
+		<div style="clear:both;" class="input_main">Please fill out all the boxes below to continue.</div>
 		<div class="leftmain">
+		<select class="input_main">
+			<option value="AustinEast">Austin-East Magnet High School</option>
+			<option value="Bearden">Bearden High School</option>
+			<option value="Career">Career Magnet Academy</option>
+			<option value="Central">Central High School</option>
+			<option value="Farragut">Farragut High School</option>
+			<option value="Fulton">Fulton High School</option>
+			<option value="Gibbs">Gibbs High School</option>
+			<option value="Halls">Halls High School</option>
+			<option value="HardenValley">Hardin Valley Academy</option>
+			<option value="Karns">Karns High School</option>
+			<option value="STEM">L&N STEM Academy</option>
+			<option value="Powell">Powell High School</option>
+			<option value="SouthDoyle">South-Doyle High School</option>
+			<option value="West">West High School</option>
+		</select><br>
 		Cost per kilowatt hour of electricity:<br>
 		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><br>
 		Number of panels wanted:<br>
