--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,9 @@
 
 <div class="steps">
 	<div class="wrapper">
-	Step 1 Step 2 Step 3
+	<img src="CheckmarkS1High.png" alt="Step 1">
+	<img src="CheckmarkS2.png" alt="Step 2">
+	<img src="CheckmarkS3.png" alt="Step 3">
 	</div>
 </div>
 
@@ -22,6 +24,7 @@
 	<div class="wrapper">
 		
 		<div style="clear:both;" class="input_main">Please fill out all the boxes below to continue.</div>
+		
 		<div class="leftmain">
 		<select class="input_main">
 			<option value="AustinEast">Austin-East Magnet High School</option>
@@ -51,12 +54,12 @@
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
-		<img src="https://maps.googleapis.com/maps/api/staticmap?center=401+henley+street,knoxville,tn=10&size=450x350" alt="Gooby pls turn images on to make your web browsing experience better.">
-		You could fit panels on this campus.<br>
-		<a class="btn" href="#step2">Click to Continue</a>
+		<img src="https://maps.googleapis.com/maps/api/staticmap?center=401+henley+street,knoxville,tn=10&size=450x350" height="350" width="450" alt="Gooby pls turn images on to make your web browsing experience better.">
+		You could fit x panels on this campus.<br>
+		<button class="btn">Click to Continue</button>
 		</div> <!-- end of right main -->
+		
 	</div> <!-- end of wrapper class -->
-	<div class="push"></div>
 </div> <!-- end of main -->
 
 
@@ -69,3 +72,13 @@
 
 </body>
 </html>
+
+<!-- To-do List:
+Make that drop down menu an unordered list
+Create seperate pages for each step.
+Correct colors.
+Implement step images.
+Have someone make a logo
+
+
+-->
