--- a/index.htm
+++ b/index.htm
@@ -8,15 +8,15 @@
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	Some cool logo will go here.
+	tlogo here
 	</div>
 </div>
 
 <div class="steps">
 	<div class="wrapper">
-	<img src="CheckmarkS1High.png" alt="Step 1">
-	<img src="CheckmarkS2.png" alt="Step 2">
-	<img src="CheckmarkS3.png" alt="Step 3">
+	<img src="CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
 	</div>
 </div>
 
@@ -46,15 +46,17 @@
 		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><br>
 		Number of panels wanted:<br>
 		<input class="input_main" type="text" name="panelcount" placeholder="1" tabindex="2" required><br>
-		Budget:<br>
+		Budget (in dollars):<br>
 		<input class="input_main" type="text" name="budget" placeholder="10,000" tabindex="3" required><br>
+		Installation Costs (in dollars):<br>
+		<input class="input_main" type="text" name="install" placeholder="3,000" tabindex="4" required><br>
 		Desired payoff time in months:<br>
-		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="4" required><br>
+		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
 		
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
-		<img src="https://maps.googleapis.com/maps/api/staticmap?center=401+henley+street,knoxville,tn=10&size=450x350" height="350" width="450" alt="Gooby pls turn images on to make your web browsing experience better.">
+		<img src="https://maps.googleapis.com/maps/api/staticmap?center=401+henley+street,knoxville,tn=10&size=450x350" height="350" width="450" alt="This is the map for L&N STEM Academy.">
 		You could fit x panels on this campus.<br>
 		<button class="btn">Click to Continue</button>
 		</div> <!-- end of right main -->
