--- a/index.htm
+++ b/index.htm
@@ -41,14 +41,13 @@ Beginning of the main, clickable content.
 	<div class="wrapper">
 		
 		<div style="clear:both;" class="input_main">Welcome to the LNSTEM Solar Panel Feasibility calculator! To begin
-		calculating if solar energy is a good choice for your school, please fill in all the boxes and click the red button
-		below.  If you need help, tap/hover the star on the right side of the respective input box.</div>
+		calculating if solar energy is a good choice for your school, select your school from the drop down list, then click next.
+		If you need help, tap/hover the star on the right side of the respective input box.</div>
 		
 		
-		<div class="leftmain">
+		<div class="leftmain" style="text-align:center;">
 		<select class="input_main">
 			<option value="AmherstElem">Amherst Elementary School</option>
-			<option value="AmherstMid">Amherst Middle School</option>
 			<option value="Farragut">Farragut High School</option>
 			<option value="GibbsElem">Gibbs Elementary School</option>
 			<option value="GibbsHigh">Gibbs High School</option>
@@ -58,19 +57,7 @@ Beginning of the main, clickable content.
 			<option value="Powell">Powell High School</option>
 			<option value="WestValley">West Valley Middle School</option>
 		</select><br>
-		
-		
-		Cost per kilowatt hour of electricity:<br>
-		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><span style="font-size:24px;">*</span><br>
-		Number of panels wanted:<br>
-		<input class="input_main" type="text" name="panelcount" placeholder="1" tabindex="2" required><br>
-		Budget (in dollars):<br>
-		<input class="input_main" type="text" name="budget" placeholder="10,000" tabindex="3" required><br>
-		Installation Costs (in dollars):<br>
-		<input class="input_main" type="text" name="install" placeholder="3,000" tabindex="4" required><br>
-		Desired payoff time in months:<br>
-		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
-		
+				
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
