--- a/step2.htm
+++ b/step2.htm
@@ -3,53 +3,80 @@
 <head>
   <title>CodeTN Project - Step 2</title>
   <link rel="stylesheet" href="style.css">
+  <script language="javascript" type="text/javascript" src="scroll.js"></script>
 </head>
 
+<!--
+Beginning of the navigation bar code.
+-->
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	Some cool logo will go here.
-	</div>
-</div>
+	<img src="lnstem.png" class="left" alt="Team LNSTEM.">
+	<img src="solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+	</div><!-- End wrapper -->
+</div><!-- End navbar -->
+<!--
+End of the navigation bar code.
+-->
 
+<!--
+Beginning of the step status bar code.
+-->
 <div class="steps">
 	<div class="wrapper">
-	Step 1 Step 2 Step 3
-	</div>
-</div>
+	<img src="CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+	</div><!-- End wrapper -->
+</div><!-- End steps -->
+<!--
+End of the step status bar code.
+-->
 
+<!--
+Beginning of the main, clickable content.
+-->
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both;" class="input_main">Please fill out all the boxes below to continue.</div>
+		<div style="clear:both;" class="input_main">Now that you have selected your school, fill in a few questions about your project.</div>
 		
-		<div class="leftmain">
+		
+		<div class="leftmain">		
+		
+		Cost per kilowatt hour of electricity:<br>
+		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><br>
+		Number of panels wanted:<br>
+		<input class="input_main" type="text" name="panelcount" placeholder="1" tabindex="2" required><br>
+		Budget (in dollars):<br>
+		<input class="input_main" type="text" name="budget" placeholder="10,000" tabindex="3" required><br>
+		Installation Costs (in dollars):<br>
+		<input class="input_main" type="text" name="install" placeholder="3,000" tabindex="4" required><br>
+		Desired payoff time in months:<br>
+		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
+		
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
-		<button class="btn">Click to Continue</button>
+		
 		</div> <!-- end of right main -->
 		
+		<div id="buttons"><button class="red left">Help</button><button class="red right">Finish</button></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
-
+<!--
+End of the main, clickable content.
+-->
 
 
 <footer>
 	<div class="wrapper">
 	Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
-	</div>
-</footer>
+	</div><!-- end of wrapper -->
+</footer><!-- end of footer -->
 
 </body>
 </html>
-
-<!-- To-do List:
-Make that drop down menu an unordered list
-Create seperate pages for each step.
-Correct colors.
-Implement step images.
-Have someone make a logo
-
-
--->
+<!-- http://jsfiddle.net/apaul34208/ZyKar/3/ --> 
+<!-- http://jsfiddle.net/JVYq7/ -->
