--- a/step2.htm
+++ b/step2.htm
@@ -25,8 +25,8 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
 	<div class="wrapper">
-	<img src="CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
-	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="CheckmarkS2High.png" class="check" alt="Step 2" height="167" height="100">
 	<img src="CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
 	</div><!-- End wrapper -->
 </div><!-- End steps -->
@@ -40,29 +40,29 @@ Beginning of the main, clickable content.
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both;" class="input_main">Now that you have selected your school, fill in a few questions about your project.</div>
+		<div style="clear:both; font-weight:bold;" class="input_main">Now that you have selected your school, fill in a few questions about your project.</div>
 		
 		
 		<div class="leftmain">		
 		
 		Cost per kilowatt hour of electricity:<br>
 		<input class="input_main" type="text" name="kwh" placeholder="0.00" tabindex="1" required><br>
-		Number of panels wanted:<br>
-		<input class="input_main" type="text" name="panelcount" placeholder="1" tabindex="2" required><br>
+		Number of panels desired:<br>
+		<input class="input_main" type="text" name="panelcount" placeholder="5" tabindex="2" required><br>
 		Budget (in dollars):<br>
 		<input class="input_main" type="text" name="budget" placeholder="10,000" tabindex="3" required><br>
-		Installation Costs (in dollars):<br>
-		<input class="input_main" type="text" name="install" placeholder="3,000" tabindex="4" required><br>
-		Desired payoff time in months:<br>
-		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
+		
 		
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
-		
+		Installation Costs (in dollars):<br>
+		<input class="input_main" type="text" name="install" placeholder="3,000" tabindex="4" required><br>
+		Desired payoff time in months:<br>
+		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
 		</div> <!-- end of right main -->
 		
-		<div id="buttons"><button class="red left">Help</button><button class="red right">Finish</button></div>
+		<div id="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
