--- a/step3.htm
+++ b/step3.htm
@@ -3,53 +3,79 @@
 <head>
   <title>CodeTN Project - Step 3</title>
   <link rel="stylesheet" href="style.css">
+  <script language="javascript" type="text/javascript" src="scroll.js"></script>
 </head>
 
+<!--
+Beginning of the navigation bar code.
+-->
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	Some cool logo will go here.
-	</div>
-</div>
+	<img src="lnstem.png" class="left" alt="Team LNSTEM.">
+	<img src="solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+	</div><!-- End wrapper -->
+</div><!-- End navbar -->
+<!--
+End of the navigation bar code.
+-->
 
+<!--
+Beginning of the step status bar code.
+-->
 <div class="steps">
 	<div class="wrapper">
-	Step 1 Step 2 Step 3
-	</div>
-</div>
+	<img src="CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="CheckmarkS3High.png" class="check" alt="Step 3" height="167" height="100">
+	</div><!-- End wrapper -->
+</div><!-- End steps -->
+<!--
+End of the step status bar code.
+-->
 
+<!--
+Beginning of the main, clickable content.
+-->
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both;" class="input_main">Please fill out all the boxes below to continue.</div>
+		<div style="clear:both; font-weight:bold;" class="input_main">After crunching some numbers, here is what we found:</div>
 		
-		<div class="leftmain">
+		
+		<div class="leftmain">		
+		
+		Solar energy is/is not a feasible choice for your school!
+		If no:
+		Try increasing your budget, or consider buying panels that produce more kilowatt hours of electricity.
+		
+		If yes:
+		You can now present this information to whoever needs it, and request a grant!
+		
+		
+		
 		</div> <!-- end of left main -->
 	
 		<div class="rightmain">
-		<button class="btn">Click to Continue</button>
+		<span style="color:#069800; font-size:80px;">Yes!</span>
+		<span style="color:#A10000; font-size:80px;">No<span>
 		</div> <!-- end of right main -->
 		
+		<div id="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="step2.htm">Back</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
-
+<!--
+End of the main, clickable content.
+-->
 
 
 <footer>
 	<div class="wrapper">
 	Copyright &copy; 2014 L&N STEM Academy. All rights reserved.
-	</div>
-</footer> 
+	</div><!-- end of wrapper -->
+</footer><!-- end of footer -->
 
 </body>
 </html>
-
-<!-- To-do List:
-Make that drop down menu an unordered list
-Create seperate pages for each step.
-Correct colors.
-Implement step images.
-Have someone make a logo
-
-
--->
+<!-- http://jsfiddle.net/apaul34208/ZyKar/3/ --> 
+<!-- http://jsfiddle.net/JVYq7/ -->
