Debugging scroll fading
Still doesn't work...

--- a/step3.htm
+++ b/step3.htm
@@ -61,7 +61,7 @@ Beginning of the main, clickable content.
 		<span style="color:#A10000; font-size:80px;">No<span>
 		</div> <!-- end of right main -->
 		
-		<div id="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="step2.htm">Back</a></div>
+		<div class="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="step2.htm">Back</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
