--- a/index.htm
+++ b/index.htm
@@ -66,7 +66,7 @@ Beginning of the main, clickable content.
 		
 		</div> <!-- end of right main -->
 		
-		<div id="buttons"><a class="red left" href="#">Help</a><a class="red right" href="step2.htm">Continue</a></div>
+		<div class="buttons"><a class="red left" href="#">Help</a><a class="red right" href="step2.htm">Continue</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
