--- a/step2.htm
+++ b/step2.htm
@@ -62,7 +62,7 @@ Beginning of the main, clickable content.
 		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
 		</div> <!-- end of right main -->
 		
-		<div id="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
+		<div class="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
