--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>CodeTN Project - Step 1</title>
-  <link rel="stylesheet" href="style.css">
-  <script language="javascript" type="text/javascript" src="scroll.js"></script>
-  <script language="javascript" type="text/javascript" src="jquery-2.1.1.min.js"></script>
+	<title>CodeTN Project - Step 1</title>
+	<link rel="stylesheet" href="style.css">
+	<script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
+	<script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
 </head>
 
 <!--
@@ -13,8 +13,8 @@ Beginning of the navigation bar code.
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	<img src="lnstem.png" class="left" alt="Team LNSTEM.">
-	<img src="solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+	<img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
+	<img src="pictures/solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
 	</div><!-- End wrapper -->
 </div><!-- End navbar -->
 <!--
@@ -26,9 +26,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
 	<div class="wrapper">
-	<img src="CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
-	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
-	<img src="CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+	<img src="pictures/CheckmarkS1High.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
 	</div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
@@ -41,7 +41,7 @@ Beginning of the main, clickable content.
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both; font-weight:bold;" class="input_main">Welcome to the LNSTEM Solar Panel Feasibility calculator! To begin
+		<div class="information">Welcome to the LNSTEM Solar Panel Feasibility calculator! To begin
 		calculating if solar energy is a good choice for your school, select your school from the drop down list, then click continue.
 		If you need help, click the help box in the bottom left hand corner.</div>
 		
@@ -66,7 +66,7 @@ Beginning of the main, clickable content.
 		
 		</div> <!-- end of right main -->
 		
-		<div class="buttons"><a class="red left" href="#">Help</a><a class="red right" href="step2.htm">Continue</a></div>
+		<div class="buttons"><a class="red left" href="help.htm">Help</a><a class="red right" href="step2.htm">Continue</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
