--- a/step2.htm
+++ b/step2.htm
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>CodeTN Project - Step 2</title>
-  <link rel="stylesheet" href="style.css">
-  <script language="javascript" type="text/javascript" src="scroll.js"></script>
+	<title>CodeTN Project - Step 2</title>
+	<link rel="stylesheet" href="style.css">
+	<script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
+	<script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
 </head>
 
 <!--
@@ -12,8 +13,8 @@ Beginning of the navigation bar code.
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	<img src="lnstem.png" class="left" alt="Team LNSTEM.">
-	<img src="solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+	<img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
+	<img src="pictures/solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
 	</div><!-- End wrapper -->
 </div><!-- End navbar -->
 <!--
@@ -25,9 +26,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
 	<div class="wrapper">
-	<img src="CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
-	<img src="CheckmarkS2High.png" class="check" alt="Step 2" height="167" height="100">
-	<img src="CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
+	<img src="pictures/CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="pictures/CheckmarkS2High.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="pictures/CheckmarkS3.png" class="check" alt="Step 3" height="167" height="100">
 	</div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
@@ -40,7 +41,7 @@ Beginning of the main, clickable content.
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both; font-weight:bold;" class="input_main">Now that you have selected your school, fill in a few questions about your project.</div>
+		<div class="information">Now that you have selected your school, fill in a few questions about your project.</div>
 		
 		
 		<div class="leftmain">		
@@ -62,7 +63,7 @@ Beginning of the main, clickable content.
 		<input class="input_main" type="text" name="payoff" placeholder="12" tabindex="5" required><br>
 		</div> <!-- end of right main -->
 		
-		<div class="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
+		<div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red left" href="index.htm">Back</a><a class="red right" href="step3.htm">Finish</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
@@ -78,5 +79,3 @@ End of the main, clickable content.
 
 </body>
 </html>
-<!-- http://jsfiddle.net/apaul34208/ZyKar/3/ --> 
-<!-- http://jsfiddle.net/JVYq7/ -->
