--- a/step3.htm
+++ b/step3.htm
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>CodeTN Project - Step 3</title>
-  <link rel="stylesheet" href="style.css">
-  <script language="javascript" type="text/javascript" src="scroll.js"></script>
+	<title>CodeTN Project - Step 3</title>
+	<link rel="stylesheet" href="style.css">
+	<script language="javascript" type="text/javascript" src="scripts/scroll.js"></script>
+	<script language="javascript" type="text/javascript" src="scripts/jquery-2.1.1.min.js"></script>
 </head>
 
 <!--
@@ -12,8 +13,8 @@ Beginning of the navigation bar code.
 <body>
 <div id="navbar">
 	<div class="wrapper">
-	<img src="lnstem.png" class="left" alt="Team LNSTEM.">
-	<img src="solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
+	<img src="pictures/lnstem.png" class="left" alt="Team LNSTEM.">
+	<img src="pictures/solarcalculator.png" class="right" alt="Solar Calculator made by team LNSTEM.">
 	</div><!-- End wrapper -->
 </div><!-- End navbar -->
 <!--
@@ -25,9 +26,9 @@ Beginning of the step status bar code.
 -->
 <div class="steps">
 	<div class="wrapper">
-	<img src="CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
-	<img src="CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
-	<img src="CheckmarkS3High.png" class="check" alt="Step 3" height="167" height="100">
+	<img src="pictures/CheckmarkS1.png" class="check" alt="Step 1" height="167" height="100">
+	<img src="pictures/CheckmarkS2.png" class="check" alt="Step 2" height="167" height="100">
+	<img src="pictures/CheckmarkS3High.png" class="check" alt="Step 3" height="167" height="100">
 	</div><!-- End wrapper -->
 </div><!-- End steps -->
 <!--
@@ -40,28 +41,32 @@ Beginning of the main, clickable content.
 <div class="main">
 	<div class="wrapper">
 		
-		<div style="clear:both; font-weight:bold;" class="input_main">After crunching some numbers, here is what we found:</div>
+		<div class="information">After crunching some numbers, here is what we found:</div>
 		
 		
 		<div class="leftmain">		
 		
-		Solar energy is/is not a feasible choice for your school!
+		Solar energy is/is not a feasible choice for your school!<br><br>
 		If no:
 		Try increasing your budget, or consider buying panels that produce more kilowatt hours of electricity.
-		
+		<br><br>
 		If yes:
-		You can now present this information to whoever needs it, and request a grant!
+		You can now present this information to whoever needs it, and request a grant!<br><br>
+		
+		Energy produced: <b>x</b> kw/h.<br><!-- solar panel output per meter squared * roof size -->
+		Pay-off time for initial investment: <b>y</b> months.<br><!-- budget + install = investment.  investment / (energy produced * cost per kilowatt hour)-->
+		Savings in ten years: <b>z</b> dollars.<br><!-- ((energy produced * cost per kilowatt hour) * 120 months) - investment -->
 		
 		
 		
 		</div> <!-- end of left main -->
 	
-		<div class="rightmain">
+		<div class="rightmain" style="text-align:center;">
 		<span style="color:#069800; font-size:80px;">Yes!</span>
 		<span style="color:#A10000; font-size:80px;">No<span>
 		</div> <!-- end of right main -->
 		
-		<div class="buttons"><a class="grey left" href="#">Help</a><a class="red left" href="step2.htm">Back</a></div>
+		<div class="buttons"><a class="grey left" href="help.htm">Help</a><a class="red left" href="step2.htm">Back</a></div>
 	</div> <!-- end of wrapper class -->
 </div> <!-- end of main -->
 <!--
@@ -77,5 +82,3 @@ End of the main, clickable content.
 
 </body>
 </html>
-<!-- http://jsfiddle.net/apaul34208/ZyKar/3/ --> 
-<!-- http://jsfiddle.net/JVYq7/ -->
