--- a/step3.htm
+++ b/step3.htm
@@ -55,8 +55,8 @@ Beginning of the main, clickable content.
 		
 		Energy produced: <b>x</b> kw/h.<br><!-- solar panel output per meter squared * roof size -->
 		Pay-off time for initial investment: <b>y</b> months.<br><!-- budget + install = investment.  investment / (energy produced * cost per kilowatt hour)-->
-		Savings in ten years: <b>z</b> dollars.<br><!-- ((energy produced * cost per kilowatt hour) * 120 months) - investment -->
-		
+		Savings in ten years: <b>z</b> dollars.<br><br><!-- ((energy produced * cost per kilowatt hour) * 120 months) - investment -->
+		Thank you for using our calculator! If you would like to start over, click <a href="index.htm"><b>here</b></a>.
 		
 		
 		</div> <!-- end of left main -->
