--- a/index.htm
+++ b/index.htm
@@ -46,13 +46,13 @@ Beginning of the main, clickable content.
                 calculating if solar energy is a good choice for your school, select your school from the drop down list, then click continue.
                 If you need help, click the help box in the bottom left hand corner.</div>
                 
-                <script type="text/javascript">
+                <script type="text/javascript"><!-- Ooh, yeah! You like dis script' eh? Well I've got more for you ;) -->
                 function showRoofSize(school) {
                         document.getElementById("roofSize").innerHTML = getRoofSize(school) + "<sup>2</sup>";
                         document.getElementById("googlemap").innerHTML = "<img src=\"" + getSchoolURL(school) + "\" height=\"350\" width=\"450\" alt=\"This is the Google Map for the selected School.\">";
                         setCookie("school", school, 5);
                 }
-                </script>
+                </script><!-- <3 Ben Klein -->
                 
                 <div class="leftmain" style="text-align:center;">
                 <select class="input_main" name="slct" id="slct" onchange="showRoofSize(this.value)">
