--- a/step2.htm
+++ b/step2.htm
@@ -47,10 +47,10 @@ Beginning of the main, clickable content.
                 <script type="text/javascript">
                 function Finish() {
                         setCookie("kwh", document.getElementById("kwh").value, 5);
-                        setCookie("panelcount", document.getElementById("kwh").value, 5);
-                        setCookie("budget", document.getElementById("kwh").value, 5);
-                        setCookie("install", document.getElementById("kwh").value, 5);
-                        setCookie("payoff", document.getElementById("kwh").value, 5);
+                        setCookie("panelcount", document.getElementById("panelcount").value, 5);
+                        setCookie("budget", document.getElementById("budget").value, 5);
+                        setCookie("install", document.getElementById("install").value, 5);
+                        setCookie("payoff", document.getElementById("payoff").value, 5);
                 }
                 </script>
                 
