I think step2 is done...
Tada, now on to step3

--- a/step2.htm
+++ b/step2.htm
@@ -51,6 +51,7 @@ Beginning of the main, clickable content.
                         setCookie("budget", document.getElementById("budget").value, 5);
                         setCookie("install", document.getElementById("install").value, 5);
                         setCookie("payoff", document.getElementById("payoff").value, 5);
+                        window.location.href = "/step3.htm";
                 }
                 </script>
                 
